# MW3-ClassGen

./: Additional_Info_Dictionaries.py  AmmoTypes.py  AttachmentEnums.py  Attachments_Info.py  Barrels.py  Bolts.py  Combs.py  Enums.py  GearEnums.py  Generator.py  Generator.spec  Guards.py  LICENSE  Lasers.py  Magazines.py  Muzzles.py  OperatorItemsEnums.py  Optics.py  README.md  RearGrips.py  Stocks.py  TriggerActions.py  Underbarrels.py  WeaponAttachmentCombos.py  WeaponClasses.py  WeaponEnums.py  Weapons.py  main.py  pyproject.toml
Enums/: AttachmentEnums.py  GearEnums.py  WeaponEnums.py  __init__.py
WeaponInfo/: Additional_Info_Dictionaries.py  WeaponAttachmentCombos.py  __init__.py
