[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mw3_class_generator_dmg"
version = "0.0.2"
requires-python = ">=3.8"
dependencies = [
  "python>=3.8",
  "pyinstaller",
]
authors = [
  {name = "Doug Griep", email = "dmgriep@gmail.com"},
]
maintainers = [
  {name = "Doug Griep", email = "dmgriep@gmail.com"}
]
description = "A very basic class generator for Modern Warfare 3"
keywords = ["mw3", "random class", "random class generator", "class generator", "CoD", "Call of Duty"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
]
